doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Quadmium\Desktop\Bittrex
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Quadmium\Desktop\Bittrex\json-simple-1.1.1.jar;C:\Users\Quadmium\Desktop\Bittrex\javax.mail.jar;C:\Users\Quadmium\Desktop\Bittrex\log4j-1.2.15.jar;C:\Users\Quadmium\Desktop\Bittrex\simple-java-mail-v2.1.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Quadmium\Desktop\Bittrex
-d
C:\Users\Quadmium\Desktop\Bittrex\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Bittrex
-windowtitle
Bittrex
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
C:\Users\Quadmium\Desktop\Bittrex/GMailAuthenticator.java
C:\Users\Quadmium\Desktop\Bittrex/BittrexGUI.java
C:\Users\Quadmium\Desktop\Bittrex/Driver.java
C:\Users\Quadmium\Desktop\Bittrex/BittrexCommunicator.java
C:\Users\Quadmium\Desktop\Bittrex/BittrexUtils.java
C:\Users\Quadmium\Desktop\Bittrex/DriverAlarm.java
C:\Users\Quadmium\Desktop\Bittrex/BittrexAlgorithm.java
<---- end of javadoc command ---->
Loading source file C:\Users\Quadmium\Desktop\Bittrex\GMailAuthenticator.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\BittrexGUI.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\Driver.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\BittrexCommunicator.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\BittrexUtils.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\DriverAlarm.java...
Loading source file C:\Users\Quadmium\Desktop\Bittrex\BittrexAlgorithm.java...
Constructing Javadoc information...
C:\Users\Quadmium\Desktop\Bittrex\DriverAlarm.java:7: error: package org.codemonkey does not exist
import org.codemonkey.simplejavamail;
                     ^
Standard Doclet version 1.8.0_20
Building tree for all the packages and classes...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\BittrexAlgorithm.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\BittrexCommunicator.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\BittrexGUI.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\BittrexUtils.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\Driver.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\DriverAlarm.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\GMailAuthenticator.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\package-frame.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\package-summary.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\package-tree.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\constant-values.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\serialized-form.html...
Building index for all the packages and classes...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\overview-tree.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\index-all.html...
Building index for all classes...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\allclasses-frame.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\allclasses-noframe.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\index.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\help-doc.html...
Generating C:\Users\Quadmium\Desktop\Bittrex\doc\stylesheet.css...
1 warning
